--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,8 +2,14 @@
     display: none;
 }
 
+#root{
+    display: flex;
+    justify-content: center;
+    margin: auto;
+  }
+
 .foo{
     color: green;
     font-size: 100px;
-    margin-left: 50px;
+
 }
