--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -2,10 +2,15 @@
   display: none;
 }
 
+#root {
+  display: flex;
+  justify-content: center;
+  margin: auto;
+}
+
 .foo {
   color: green;
   font-size: 100px;
-  margin-left: 50px;
 }
 
 /*# sourceMappingURL=stylesheet.css.map */
